syntax = "proto3";

option csharp_namespace = "GrpcBuild";

package build;

// The build service definition.
service BuildService {
  rpc Build (BuildRequest) returns (BuildReply);
  rpc GetArtifactFiles (GetArtifactFilesRequest) returns (GetArtifactFilesReply);
  rpc LoadArtifactFile (LoadArtifactFileRequest) returns (LoadArtifactFileReply);
}

// Enums
enum BuildSystem {
	dotnet = 0;
	maven = 1;
}

enum BuildStatus {
	successful = 0;
	failed = 1;
}

// Build
message BuildRequest {
	string workDirId = 1;
	string rootFilePath = 2;
	BuildSystem buildSystem = 3;
}

message BuildReply {
	string buildId = 1;
	BuildStatus buildStatus = 2;
	string buildOutput = 3;
}

// GetArtifactFiles
message GetArtifactFilesRequest {
	string workDirId = 1; // TODO: weg
	string buildId = 2;
}

message GetArtifactFilesReply {
	repeated FileRevision files = 1;
}

message FileRevision {
	string filePath = 1;
	int32 revisionNumber = 2;
}

// LoadArtifactFile
message LoadArtifactFileRequest {
	string workDirId = 1;
	string buildId = 2;
	string filePath = 3;
}

message LoadArtifactFileReply {
	string filePath = 1;
	bytes content = 2;
}